--- a/SeeClickFixCodeTest/SeeClickFixCodeTest/Base.lproj/Main.storyboard
+++ b/SeeClickFixCodeTest/SeeClickFixCodeTest/Base.lproj/Main.storyboard
@@ -1,26 +1,106 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IVD-Oy-rWB">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="H9p-wa-heq">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController id="IVD-Oy-rWB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MSB-mG-2bb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="0hk-Vh-pNf" kind="relationship" relationship="rootViewController" id="248-al-fHV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kqx-MQ-UI5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-84" y="7"/>
+        </scene>
+        <!--Twitter Status Updates-->
+        <scene sceneID="Tdq-2c-BmU">
+            <objects>
+                <tableViewController id="0hk-Vh-pNf" customClass="SCFTwitterStatusTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" id="YMX-6U-sJc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SCFTweetCell" rowHeight="77" id="uq9-Fv-3k6" customClass="SCFTweetTableViewCell">
+                                <rect key="frame" x="0.0" y="28" width="375" height="77"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uq9-Fv-3k6" id="Gnw-Ue-mSc">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chris Turner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dsv-3C-kdb">
+                                            <rect key="frame" x="91" y="8" width="276" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the status label." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SZ-Uv-FhG">
+                                            <rect key="frame" x="91" y="37" width="276" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JIg-cG-iTf">
+                                            <rect key="frame" x="16" y="8" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="EUz-g9-1r3"/>
+                                                <constraint firstAttribute="height" constant="60" id="Yxy-ff-nsd"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="JIg-cG-iTf" firstAttribute="top" secondItem="Gnw-Ue-mSc" secondAttribute="topMargin" id="0B8-9S-eVx"/>
+                                        <constraint firstItem="6SZ-Uv-FhG" firstAttribute="leading" secondItem="Gnw-Ue-mSc" secondAttribute="leadingMargin" constant="83" id="7Hx-rZ-C0a"/>
+                                        <constraint firstItem="dsv-3C-kdb" firstAttribute="top" secondItem="Gnw-Ue-mSc" secondAttribute="topMargin" id="COB-2G-nzW"/>
+                                        <constraint firstItem="dsv-3C-kdb" firstAttribute="trailing" secondItem="Gnw-Ue-mSc" secondAttribute="trailingMargin" id="FDn-21-A5h"/>
+                                        <constraint firstItem="6SZ-Uv-FhG" firstAttribute="top" secondItem="dsv-3C-kdb" secondAttribute="bottom" constant="8" id="Fyq-3J-lxu"/>
+                                        <constraint firstItem="JIg-cG-iTf" firstAttribute="leading" secondItem="Gnw-Ue-mSc" secondAttribute="leadingMargin" constant="8" id="KG4-CT-dAX"/>
+                                        <constraint firstItem="6SZ-Uv-FhG" firstAttribute="trailing" secondItem="Gnw-Ue-mSc" secondAttribute="trailingMargin" id="Stn-fD-zgp"/>
+                                        <constraint firstItem="6SZ-Uv-FhG" firstAttribute="top" secondItem="dsv-3C-kdb" secondAttribute="bottom" constant="8" id="dUC-F7-L2g"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="6SZ-Uv-FhG" secondAttribute="bottom" constant="11" id="deH-oy-kqq"/>
+                                        <constraint firstItem="dsv-3C-kdb" firstAttribute="leading" secondItem="Gnw-Ue-mSc" secondAttribute="leadingMargin" constant="83" id="du2-pj-KzU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorProfileImageView" destination="JIg-cG-iTf" id="Qef-Rx-1Qh"/>
+                                    <outlet property="screenNameLabel" destination="dsv-3C-kdb" id="onK-D3-LrV"/>
+                                    <outlet property="statusTextLabel" destination="6SZ-Uv-FhG" id="3Hi-sK-3of"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0hk-Vh-pNf" id="DaU-9J-mGA"/>
+                            <outlet property="delegate" destination="0hk-Vh-pNf" id="ipr-ou-9XI"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Twitter Status Updates" id="vEl-lE-5A8"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="JTN-G1-G6r">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <attributedString key="attributedTitle"/>
+                        <connections>
+                            <action selector="pullToRefresh:" destination="0hk-Vh-pNf" eventType="valueChanged" id="iUM-52-eqa"/>
+                        </connections>
+                    </refreshControl>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HK6-ez-adM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1005.6" y="6.746626686656672"/>
         </scene>
     </scenes>
 </document>
